--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
-bot_token: 'MTE0NzEwODI0NDgyNTg1NDAxMw.GrQ8a1.UnK3NkCJjLKkoxS0cSgnbddG81R2l0Pf3WLq8s'
-bot_prefix: '/downto'
+bot_token: 'MTE1MzgxNzczMjkyMDM4MTQ3MA.GPtMbF.sEBpXAWuobmzwusPe9uQt-UjMNFjQn5_rusej0'
+bot_prefix: 'downto'
 img_size_cutoff: 25000000
 moderator_role_id: 1147108244825854013
 global_guild_block: false
